syntax = "proto3";

package protobufs;

option go_package = "/protobufs";

service RepositoryLock {
    rpc HandleSaveRawSuccess(stream ReportSaveRawSuccessRequest) returns (stream ReportSaveRawSuccessResponse);
}

message ReportSaveRawSuccessRequest {
    string user_id = 1;
    string file_path = 2;
    int32 content_chunk_index = 3;
    int32 num_total_chunks = 4;
}

message ReportSaveRawSuccessResponse {
    string file_path = 1;
    bool all_chunks_saved = 2;
}

//  protoc --go_out=. --go-grpc_out=. protobufs/repository_lock.proto
