syntax = "proto3";

option go_package = "/repositorysyncservice/pb";

message FileChunk {
    string file_path = 1;
    int32 chunk_index = 2;
    int32 num_total_chunks = 3;
}


message FileChunks {
    string user_id = 1;
    repeated FileChunk file_chunks = 2;
}


message FileChunkStatus {
    string file_path = 1;
    bool is_last_chunk = 2;
}


message FileChunkStatuses {
    repeated FileChunkStatus file_chunk_status = 1;
}


service RepositorySyncService {
    rpc SyncFileChunks(FileChunks) returns (FileChunkStatuses);
}

// protoc *.proto --go_out=.. --go-grpc_out=..